<resources>
    <string name="app_name">BlogApp</string>
    <string name="large_text">어쩔티비</string>
    <string name="action_settings">Settings</string>
    <string name="blog_title">수밍의 블로그</string>

    <string name="label_post">포스트</string>
    <string name="label_posting">포스팅</string>
    <string name="label_comments">댓글</string>
    <string name="label_settings">환경설정</string>

    <string name="txt_blog_title">블로그 이름</string>
    <string name="txt_user_name">닉네임</string>
    <string name="txt_no_post">포스트가 없습니다.\n첫번째 포스트를 남겨주세요.</string>
    <string name="txt_no_comment">댓글이 없습니다.\n첫번째 댓글을 남겨주세요.</string>
    <string name="txt_first_setting">환영합니다!\n블로그 이름과 닉네임을 설정해주세요 :)</string>
    <string name="txt_check_delete_post">해당 포스트를 삭제하시겠습니까?</string>

    <string name="hint_input_post">내용을 입력하세요.</string>
    <string name="hint_input_comment">댓글을 입력하세요.</string>
    <string name="hint_input_blog_name">블로그 이름을 입력하세요.</string>
    <string name="hint_input_user_name">닉네임을 입력하세요.</string>

    <string name="word_save">저장</string>
    <string name="word_title">제목</string>
    <string name="word_register">등록</string>
    <string name="word_edit">수정</string>
    <string name="word_delete">삭제</string>
    <string name="word_comment">댓글</string>
    <string name="word_ok">확인</string>
    <string name="word_cancel">취소</string>
</resources>